Production version, need to check email

--- a/index-image.html
+++ b/index-image.html
@@ -90,7 +90,7 @@
 	</section>
 
 	<section id="cv">	
-		<img alt="" class="thumb-middle" src="img/user-1.jpg" alt="Brian Jenney in CSS">			
+		<img class="thumb-middle" src="img/BrianContemplate.jpg" alt="Brian Jenney in CSS">			
 		<div class="container">
 			<div class="row">
 				<div class="hero col-sm-6 col-sm-offset-3">
@@ -122,10 +122,10 @@
 								<div class="col-sm-9">
 
 								
-										<a href="#"><i class="fa fa-github fa-fw"></i></a>
-										<a href="#"><i class="fa fa-twitter fa-fw"></i></a>
-										<a href="#"><i class="fa fa-facebook fa-fw"></i></a>
-										<a href="#"><i class="fa fa-linkedin fa-fw"></i> </a>
+										<a href="https://github.com/BrianJenney"><i class="fa fa-github fa-fw"></i></a>
+										<a href="https://twitter.com/BriansNotHere"><i class="fa fa-twitter fa-fw"></i></a>
+										<a href="https://www.facebook.com/brian.jenney.5"><i class="fa fa-facebook fa-fw"></i></a>
+										<a href="https://www.linkedin.com/in/brian-jenney-2484277"><i class="fa fa-linkedin fa-fw"></i> </a>
 										
 								</div>
 							</div>
@@ -435,9 +435,9 @@
 			</div><!--row-->
 			
 				<div class="social-icons">
-					<a href="#" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
-					<a href="#" target="_blank" class="github"><i class="fa fa-github"></i> </a>
-					<a href="#" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i> </a>
+					<a href="https://www.facebook.com/brian.jenney.5" target="facebook" class="facebook"><i class="fa fa-facebook"></i></a>
+					<a href="https://github.com/BrianJenney" target="github" class="github"><i class="fa fa-github"></i> </a>
+					<a href="https://www.linkedin.com/in/brian-jenney-2484277" target="linkedin" class="linkedin"><i class="fa fa-linkedin"></i> </a>
 				</div>
 				<div class="clearfix"></div>
 			
